Updated customizer to remove demo features, updated styling, reduced the amount of words displayed in excerpts on homepage to prevent content overflows.

--- a/sass/site/primary/_home.scss
+++ b/sass/site/primary/_home.scss
@@ -149,6 +149,12 @@
 		top 		: 0;
 		right 		: 0;
 		z-index 	: 10;
+
+		article:last-child {
+			p {
+				margin-bottom: 0;
+			}
+		}
 	}
 
 	h2 {
